2004-11-30  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/types.h: RT_TIME_INFINITE -> TM_INFINITE,
	RT_TIME_NONBLOCK -> TM_NONBLOCK for consistency purpose with other
	namings.

2004-11-29  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/event.c (rt_event_clear): Add service to clear a set
	of flags from an event group.

	* skins/rtai/timer.h: RT_TIMER_UNSET/ONESHOT -> TM_UNSET/ONESHOT
	for consistency with other namings.

2004-11-28  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.6.5

2004-11-28  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.9-i386-r9c1.

	* skins/rtai/task.c (rt_task_create): Allow for creation in
	suspended state passing T_SUSP.
	(rt_task_start): Apply CPU affinity.

	* skins/rtai/task.h (T_CPU): Fix for multiple cpu affinity.

	* skins/rtai/event.c: Rename rt_event_post() -> rt_event_signal(),
	rt_event_pend() -> rt_event_wait() for consistency purpose with
	the condvar support.

2004-11-28  Jan Kiszka <kiszka@rts.uni-hannover.de>

	* skins/rtai/sem.c: Export sem_broadcast().

2004-11-27  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-*/syscall.h: Provide support for direct
	reading of the TSC in user-space when available.

	* nucleus/timer.c: Read Adeos profile timings when available when
	CONFIG_RTAI_OPT_TIMESTAMPS is enabled.

2004-11-26  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/snippets: Add code snippets illustrating the use of
	the API.

	* nucleus/pod.c: Compile out the scheduler hook unless we are
	actually building the simulator.
	(xnpod_switch_fpu): Inline calls on the fast path.

	* skins/rtai/lib/task.c (rt_task_set_mode, rt_task_notify): Export
	to user-space.

	* testsuite/latency/latency.c (main): Allow for setting the
	sampling period.

2004-11-25  Philippe Gerum  <rpm@xenomai.org>

	* fusion: Pass RTAI_KMOD_CFLAGS as needed.

2004-11-24  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/module.c (__xeno_skin_init): Fix init without
	user-space support.
